--- a/src/app/nfe/grid-list/grid-list.component.html
+++ b/src/app/nfe/grid-list/grid-list.component.html
@@ -1,3 +1,9 @@
+<div class="po-wrapper">
+  <po-toolbar [p-title]="title"></po-toolbar>
+  <po-menu [p-menus]="menus"></po-menu>
+
+  <router-outlet></router-outlet>
+</div>
 <po-page-list
   p-title="Notas Fiscais!"
   [p-actions]="actions"
