Primeira listagem de dados  de empresa

--- a/src/app/companies/cliente-form/cliente-form.component.html
+++ b/src/app/companies/cliente-form/cliente-form.component.html
@@ -1,31 +1,18 @@
-<po-page-edit
-  (p-save)="save()"
-  (p-cancel)="cancel()"
-  [p-title]="title"
-  [p-disable-submit]="formCliente.invalid">
+<po-page-edit (p-save)="save()" (p-cancel)="cancel()" [p-title]="title" [p-disable-submit]="formCliente.invalid">
 
   <form #formCliente="ngForm">
 
-    <po-divider class="po-sm-12" p-label="Dados pessoais"></po-divider>
+    <po-divider class="po-sm-12" p-label="Dados Empresarial"></po-divider>
 
-    <po-input class="po-md-5"
-      name="sfj_pessoa"
-      [(ngModel)]="cliente.sfj_pessoa"
-      p-label="Código"
+    <po-input class="po-md-5" name="nome_razao_social" [(ngModel)]="cliente.sfj_pessoa" p-label="Código"
       [p-disabled]="true">
     </po-input>
 
-    <po-input class="po-md-5"
-      name="sfj_nome"
-      [(ngModel)]="cliente.sfj_nome"
-      p-required
+    <po-input class="po-md-5" name="nome_razao_social" [(ngModel)]="cliente.sfj_nome" p-required
       p-label="Nome completo">
     </po-input>
 
-    <po-input class="po-md-5"
-      name="sfj_fone"
-      [(ngModel)]="cliente.sfj_fone"
-      p-label="Telefone"
+    <po-input class="po-md-5" name="sfj_fone" [(ngModel)]="cliente.sfj_fone" p-label="Telefone"
       p-mask="(99) 99999?-9999">
     </po-input>
 
