--- a/src/app/companies/cliente-list/cliente-list.component.html
+++ b/src/app/companies/cliente-list/cliente-list.component.html
@@ -12,7 +12,7 @@
   [p-secondary-action]="advancedFilterSecondaryAction">
 
   <form #f="ngForm">
-    <po-input class="po-sm-6" name="nome_razao_social" [(ngModel)]="nome_razao_social" p-label="Nome">
+    <po-input class="po-sm-6" name="empresasData" [(ngModel)]="nome_razao_social" p-label="Nome">
     </po-input>
   </form>
 
