nuv001 - Alterando chamadas e estudando o post para cadastrar empresa

--- a/src/app/companies/companies-form/cliente-form.component.html
+++ b/src/app/companies/companies-form/cliente-form.component.html
@@ -4,15 +4,15 @@
 
     <po-divider class="po-sm-12" p-label="Dados Empresarial"></po-divider>
 
-    <po-input class="po-md-5" name="nome_razao_social" [(ngModel)]="cliente.sfj_pessoa" p-label="Código"
+    <po-input class="po-md-5" name="nome_razao_social" [(ngModel)]="empresa.cpf_cnpj" p-label="Código"
       [p-disabled]="true">
     </po-input>
 
-    <po-input class="po-md-5" name="nome_razao_social" [(ngModel)]="cliente.sfj_nome" p-required
+    <po-input class="po-md-5" name="nome_razao_social" [(ngModel)]="empresa.cpf_cnpj" p-required
       p-label="Nome completo">
     </po-input>
 
-    <po-input class="po-md-5" name="sfj_fone" [(ngModel)]="cliente.sfj_fone" p-label="Telefone"
+    <po-input class="po-md-5" name="sfj_fone" [(ngModel)]="empresa.cpf_cnpj" p-label="Telefone"
       p-mask="(99) 99999?-9999">
     </po-input>
 
