Correcao rota  e visualizao de empresas

--- a/src/app/companies/companies-view/companies-view.component.html
+++ b/src/app/companies/companies-view/companies-view.component.html
@@ -3,13 +3,13 @@
   <po-divider p-label="Dados pessoais"></po-divider>
 
   <div class="po-row">
-    <po-info class="po-md-5" p-label="Código" [p-value]="empresa.sfj_pessoa">
+    <po-info class="po-md-5" p-label="Código" [p-value]="empresa.cpf_cnpj">
     </po-info>
 
-    <po-info class="po-md-5" p-label="Nome" [p-value]="empresa.sfj_nome">
+    <po-info class="po-md-5" p-label="Nome" [p-value]="empresa.nome_razao_social">
     </po-info>
 
-    <po-info class="po-md-5" p-label="Telefone" p-mask="(99) 99999?-9999" [p-value]="empresa.sfj_fone">
+    <po-info class="po-md-5" p-label="Telefone" p-mask="(99) 99999?-9999" [p-value]="empresa.fone">
     </po-info>
   </div>
 
