--- a/src/app/companies/companies-view/companies-view.component.html
+++ b/src/app/companies/companies-view/companies-view.component.html
@@ -1,15 +1,18 @@
 <po-page-detail (p-back)="back()" (p-remove)="remove()" (p-edit)="edit()" p-title="Detalhes do empresa">
 
-  <po-divider p-label="Dados pessoais"></po-divider>
-
+  <po-divider p-label="Dados Empresariais"></po-divider>
   <div class="po-row">
-    <po-info class="po-md-5" p-label="Código" [p-value]="empresa.cpf_cnpj">
+    <po-info class="po-md-5" p-label="Codigo" [p-value]="empresa.cpf_cnpj">
+    </po-info>
+    <po-info class="po-md-5" p-label="Endereco" [p-value]="empresa.endereco_logradouro">
     </po-info>
 
-    <po-info class="po-md-5" p-label="Nome" [p-value]="empresa.nome_razao_social">
+    <po-info class="po-md-5" p-label="Numero" [p-value]="empresa.endereco_numero">
     </po-info>
 
-    <po-info class="po-md-5" p-label="Telefone" p-mask="(99) 99999?-9999" [p-value]="empresa.fone">
+    <po-info class="po-md-5" p-label="Bairro" [p-value]="empresa.endereco_bairro">
+    </po-info>
+    <po-info class="po-md-5" p-label="Fone" p-mask="(99) 99999?-9999" [p-value]="empresa.fone">
     </po-info>
   </div>
 
