Atualização da tela inicial de empresas

--- a/src/app/companies/companies-form/companies-form.component.html
+++ b/src/app/companies/companies-form/companies-form.component.html
@@ -4,16 +4,16 @@
 
     <po-divider class="po-sm-12" p-label="Dados Empresarial"></po-divider>
 
-    <po-input class="po-md-5" name="nome_razao_social" [(ngModel)]="empresa.nome_razao_social"
+    <!-- <po-input class="po-md-5" name="nome_razao_social" [(ngModel)]="empresa.nome_razao_social"
       p-label="Nome / Razão Social" [p-disabled]="false">
     </po-input>
     <po-input class="po-md-5" name="nome_fantasia" [(ngModel)]="empresa.nome_fantasia" p-required
       p-label="Nome Fantasia">
-    </po-input>
+    </po-input> -->
     <po-input class="po-md-5" name="cpf_cnpj" [(ngModel)]="empresa.cpf_cnpj" p-required p-label="CNPJ"
       p-mask="99.999.999/9999-99">
     </po-input>
-    <po-input class="po-md-5" name="email" [(ngModel)]="empresa.email" p-required p-label="Email">
+    <!-- <po-input class="po-md-5" name="email" [(ngModel)]="empresa.email" p-required p-label="Email">
     </po-input>
     <po-input class="po-md-5" name="empresa.fone" [(ngModel)]="empresa.fone" p-label="Telefone"
       p-mask="(99) 99999?-9999">
@@ -48,7 +48,7 @@
     </po-input>
 
     <po-input class="po-md-5" name="endereco_cep" [(ngModel)]="empresa.endereco_cep" p-required p-label="CEP">
-    </po-input>
+    </po-input> -->
 
   </form>
 
