Alterei api para usar api externa, o get foi feito

--- a/src/app/companies/companies-form/companies-form.component.html
+++ b/src/app/companies/companies-form/companies-form.component.html
@@ -10,7 +10,7 @@
     <po-input class="po-md-5" name="nome_fantasia" [(ngModel)]="empresa.nome_fantasia" p-required
       p-label="Nome Fantasia">
     </po-input> -->
-    <po-input class="po-md-5" name="cpf_cnpj" [(ngModel)]="empresa.cpf_cnpj" p-required p-label="CNPJ"
+    <po-input class="po-md-5" name="cpf_cnpj" [(ngModel)]="empresas.cpf_cnpj" p-required p-label="CNPJ"
       p-mask="99.999.999/9999-99">
     </po-input>
     <!-- <po-input class="po-md-5" name="email" [(ngModel)]="empresa.email" p-required p-label="Email">
