--- a/src/app/companies/companies-view/companies-view.component.html
+++ b/src/app/companies/companies-view/companies-view.component.html
@@ -19,13 +19,13 @@
 
     <po-divider class="po-md-12" p-label="Endereço"></po-divider>
 
-    <po-info class="po-md-5" p-label="Logradouro" [p-value]="empresa.endereco_logradouro">
+    <po-info class="po-md-5" p-label="Logradouro" [p-value]="endereco.logradouro">
     </po-info>
 
-    <po-info class="po-md-5" p-label="Numero" [p-value]="empresa.endereco_numero">
+    <po-info class="po-md-5" p-label="Numero" [p-value]="endereco.numero">
     </po-info>
 
-    <po-info class="po-md-5" p-label="Bairro" [p-value]="empresa.endereco_bairro">
+    <po-info class="po-md-5" p-label="Bairro" [p-value]="endereco.bairro">
     </po-info>
 
 
