--- a/src/app/companies/companies-view/companies-view.component.html
+++ b/src/app/companies/companies-view/companies-view.component.html
@@ -19,7 +19,7 @@
 
     <po-divider class="po-md-12" p-label="Endereço"></po-divider>
 
-    <po-info class="po-md-5" p-label="Logradouro" [p-value]="empresa">
+    <po-info class="po-md-5" p-label="Logradouro" [p-value]="empresa.endereco_logradouro">
     </po-info>
 
     <po-info class="po-md-5" p-label="Numero" [p-value]="empresa.endereco_numero">
