Limpeza de console logs

--- a/src/app/companies/companies-form/companies-form.component.html
+++ b/src/app/companies/companies-form/companies-form.component.html
@@ -15,6 +15,10 @@
     </po-input>
     <po-input class="po-md-5" name="email" [(ngModel)]="empresa.email" p-required p-label="Email">
     </po-input>
+
+    <po-input class="po-md-5" name="inscricao_municipal" [(ngModel)]="empresa.inscricao_municipal" p-required
+      p-label="Inscrição Municipal">
+    </po-input>
     <po-input class="po-md-5" name="empresa.fone" [(ngModel)]="empresa.fone" p-label="Telefone"
       p-mask="(99) 99999?-9999">
     </po-input>
