--- a/src/app/companies/companies-list/companies-list.component.html
+++ b/src/app/companies/companies-list/companies-list.component.html
@@ -1,15 +1,28 @@
-<po-page-list p-title="Lista de empresas" [p-actions]="actions" [p-disclaimer-group]="disclaimerGroup"
-  [p-filter]="filter">
-
-  <po-table #table p-selectable p-sort="true" [p-actions]="tableActions" [p-columns]="columns" [p-items]="enderecoData"
-    [p-loading]="loading" [p-show-more-disabled]="!hasNext" (p-sort-by)="sortBy($event)"
-    (p-show-more)="showMore($event)">
+<po-page-list
+  p-title="Lista de empresas"
+  [p-actions]="actions"
+  [p-disclaimer-group]="disclaimerGroup"
+  [p-filter]="filter"
+>
+  <po-table
+    #table
+    p-selectable
+    p-sort="true"
+    [p-actions]="tableActions"
+    [p-columns]="columns"
+    [p-items]="enderecoData"
+    [p-loading]="loading"
+    [p-show-more-disabled]="!hasNext"
+    (p-sort-by)="sortBy($event)"
+    (p-show-more)="showMore($event)"
+  >
   </po-table>
-
 </po-page-list>
 
-<po-modal #advancedFilter p-title="Busca avançada" [p-primary-action]="advancedFilterPrimaryAction"
-  [p-secondary-action]="advancedFilterSecondaryAction">
-
-
+<po-modal
+  #advancedFilter
+  p-title="Busca avançada"
+  [p-primary-action]="advancedFilterPrimaryAction"
+  [p-secondary-action]="advancedFilterSecondaryAction"
+>
 </po-modal>
