GET para endpoint NFS-e

--- a/src/app/nfse/nfse-list/nfse-list.component.html
+++ b/src/app/nfse/nfse-list/nfse-list.component.html
@@ -10,7 +10,7 @@
     p-sort="true"
     [p-actions]="tableActions"
     [p-columns]="columns"
-    [p-items]="nfsesData"
+    [p-items]="items"
     [p-loading]="loading"
     [p-show-more-disabled]="!hasNext"
     (p-sort-by)="sortBy($event)"
